--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <h2>Mina projekt</h2>
 <ul>
   <li>
-    <a href="public/TopMovies.html"><h3>Project 1: Top Movies</h3></a>
-    <a href="public/TopMovies.html">
+    <a href="TopMovies.html"><h3>Project 1: Top Movies</h3></a>
+    <a href="TopMovies.html">
       <img src="assets/images/movie_ranking.jpg" alt="Image of popcorn and the text Movie Ranking on topp" height="200">
     </a>
   </li>
 
 
   <li>
-    <a href="public/TopGames.html"><h3>Project 2: Top Games</h3></a>
-    <a href="public/TopGames.html">
+    <a href="TopGames.html"><h3>Project 2: Top Games</h3></a>
+    <a href="TopGames.html">
       <img src="assets/images/game_ranking.jpg" alt="Image of a hot keyboard and the spacebar having the text game rankning" height="200">
     </a>
   </li>
